# face_direction

./: README.md  __main__.py  pose.py  pyproject.toml  test.py
src/face_direction/: __main__.py  dataclasses.py  face_orienter.py  utils.py
